# OurBnb

./: .env.example  .gitignore  README.md  docker-compose.ghcr.yml  docker-compose.prod.yml  docker-compose.proxy.yml  docker-compose.yml
.github/workflows/: build-images.yml
backend/: pyproject.toml  requirements.txt
backend/src/: constants.py  database.py  db.py  main.py  scoring.py  scrape_utils.py  scraper_service.py
backend/src/models/: db.py  schemas.py
backend/src/routes/: api.py  dummy.py  filters.py  groups.py  helpers.py  leaderboard.py  listings.py  scrape.py  users.py  votes.py  voting.py
db/: database.sql
db/init/: init.sql
frontend/: Dockerfile
frontend/nextjs/: .gitignore  next.config.ts  package.json
frontend/nextjs/src/app/: layout.tsx  page.tsx
frontend/nextjs/src/app/create/: page.tsx
frontend/nextjs/src/app/demo/: page.tsx
frontend/nextjs/src/components/: OnboardingTutorialModal.tsx  VotingCard.tsx
frontend/nextjs/src/lib/: api.ts  locationSearch.ts
frontend/nextjs/src/store/: useAppStore.ts
frontend/nextjs/src/types/: index.ts
microservice/: Dockerfile  README.md  pyproject.toml  requirements.txt
microservice/src/: main.py
microservice/src/models/: __init__.py  schemas.py
microservice/src/routes/: __init__.py  dummy.py  listing.py  search.py
microservice/src/scraper/: __init__.py  core.py  headers.py  proxy.py  scrape.py  scrape_listing.py
nginx/: nginx.conf
scraper-worker/: Dockerfile  db.py  headers.py  proxy.py  pyproject.toml  scrape.py  scrape_listing.py  worker.py
(+6 files in other folders)
