[project]
name = "airbnb-api"
version = "1.0.0"
description = "A standalone REST API microservice for Airbnb listing data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "fastapi-versioning>=0.10.0",
    "uvicorn[standard]>=0.37.0",
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
